Wrap lines too long for the screen in the pre-formatted commit messages. fixes #35 for a lot of cases Big screens will stay the same, but on mobile this will save you a lot of horizontally scrolling.

--- a/www/css/freshports.css
+++ b/www/css/freshports.css
@@ -6,7 +6,7 @@ BODY, TD, TR, P, UL, OL, LI, INPUT, SELECT, DL, DD, DT, FONT
 IMG#fp-logo { width: 100%; height: auto }
 
 CODE.code { color: #461b7e}
-PRE.code {  color: #461b7e}
+PRE.code {  color: #461b7e; white-space: pre-wrap}
 LI.configure {  color: #461b7e;     display: block;
     font-family: monospace;}
 span#configureplist-Extra {  color: #461b7e;
